// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFee should render 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="InputCurrency"
          type="text"
          value="2"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="2"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex overflow-hidden items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee if value property changes 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="InputCurrency"
          type="text"
          value="1"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex overflow-hidden items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on avg 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="InputCurrency"
          type="text"
          value="1.355"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1.355"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex overflow-hidden items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on max 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="InputCurrency"
          type="text"
          value="10"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="10"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex overflow-hidden items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on min 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="InputCurrency"
          type="text"
          value="1"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex overflow-hidden items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;
